--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>Computer Science Student | Full Stack Developer | Cybersecurity Enthusiast</p>
             <div class="hero-buttons">
                 <a href="#contact" class="cta-button">Get In Touch</a>
-                <a href="#" class="resume-button" onclick="downloadResume()">
+                <a href="#" class="resume-button" onclick="downloadResumeWithDebug(); return false;">
                     <i class="fas fa-download"></i> Download Resume
                 </a>
             </div>
@@ -59,7 +59,7 @@
                     <p>I am actively seeking a full-time role as a full stack, backend, or frontend developer upon completing my internship in August 2025. I enjoy working collaboratively in fast-paced environments, tackling technical challenges, and continuously expanding my skill set through emerging tools and frameworks.</p>
                     <p>With a strong foundation in software engineering, cybersecurity knowledge, and a passion for building user-centric solutions, I aim to contribute meaningfully to innovative projects while advancing my growth in the tech industry.</p>
                     <div class="resume-download-section">
-                        <button class="resume-btn" onclick="downloadResume()">
+                        <button class="resume-btn" onclick="downloadResumeWithDebug()">
                             <i class="fas fa-file-pdf"></i> Download My Resume
                         </button>
                     </div>
@@ -213,7 +213,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-linkedin"></i>
-                        <span>linkedin.com/in/hilmi-wali</span>
+                        <a href="https://www.linkedin.com/in/hilmi-wali/" target="_blank" rel="noopener noreferrer">linkedin.com/in/hilmi-wali</a>
                     </div>
                 </div>
                 <div class="contact-form">
@@ -241,10 +241,10 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/hilmiwali" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/hilmi-wali/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+                <a href="mailto:hilmiwali7702@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="tel:+60108167702"><i class="fas fa-phone"></i></a>
             </div>
             <p>&copy; 2025 Ahmad Hilmi. All rights reserved.</p>
         </div>
