--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#experience">Experience</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#certifications">Certifications</a></li>
+                    <li><a href="#competitions">Competitions</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="theme-toggle">
@@ -107,6 +111,155 @@
         </div>
     </section>
 
+    <!-- Education Section -->
+    <section id="education" class="section">
+        <div class="container">
+            <h2>Education</h2>
+            <div class="education-timeline">
+                <div class="education-item">
+                    <div class="education-year">2021 - Present</div>
+                    <div class="education-content">
+                        <div class="education-icon">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div class="education-details">
+                            <h3>Bachelor of Computer Science</h3>
+                            <h4>Information Security and Assurance</h4>
+                            <p class="institution">Universiti Sains Islam Malaysia (USIM)</p>
+                            <div class="education-achievements">
+                                <span class="achievement-badge cgpa">CGPA: 3.67</span>
+                                <span class="achievement-badge status">Final Year</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="education-item">
+                    <div class="education-year">2020 - 2021</div>
+                    <div class="education-content">
+                        <div class="education-icon">
+                            <i class="fas fa-certificate"></i>
+                        </div>
+                        <div class="education-details">
+                            <h3>Foundation in Accounting and Muamalat</h3>
+                            <p class="institution">Universiti Sains Islam Malaysia (USIM)</p>
+                            <div class="education-achievements">
+                                <span class="achievement-badge cgpa">CGPA: 3.56</span>
+                                <span class="achievement-badge muet">MUET: Band 4</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience" class="section">
+        <div class="container">
+            <h2>Work Experience</h2>
+            <div class="experience-timeline">
+                <div class="experience-item">
+                    <div class="experience-year">Mar 2025 - Aug 2025</div>
+                    <div class="experience-content">
+                        <div class="experience-icon">
+                            <i class="fas fa-laptop-code"></i>
+                        </div>
+                        <div class="experience-details">
+                            <h3>System Development Intern</h3>
+                            <p class="company">Internship Program</p>
+                            <div class="experience-phases">
+                                <div class="phase">
+                                    <h4><i class="fas fa-bug"></i> QA Team - Phase 1 (Mar-Apr)</h4>
+                                    <ul>
+                                        <li>Conducted manual testing on systems including writing and executing test scripts</li>
+                                        <li>Identified and reported bugs, ensuring system functionalities aligned with requirements</li>
+                                        <li>Contributed to user manual documentations to support client onboarding</li>
+                                    </ul>
+                                </div>
+                                <div class="phase">
+                                    <h4><i class="fas fa-code"></i> Development Team - Phase 2 (May-Aug)</h4>
+                                    <ul>
+                                        <li>Transitioned to development team and contributed to coding, debugging and enhancing features</li>
+                                        <li>Worked closely with senior developers in Agile development process</li>
+                                        <li>Participated in sprint planning, task tracking and code reviews</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="experience-item">
+                    <div class="experience-year">Jan 2025 - Feb 2025</div>
+                    <div class="experience-content">
+                        <div class="experience-icon">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <div class="experience-details">
+                            <h3>Mobile App Developer</h3>
+                            <p class="company">Freelance</p>
+                            <ul>
+                                <li>Developed custom mobile application prototypes using Flutter</li>
+                                <li>Created apps for final-year students to showcase their academic projects</li>
+                                <li>Collaborated closely with clients to align app features with project goals</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="experience-item">
+                    <div class="experience-year">Oct 2023 - Dec 2023</div>
+                    <div class="experience-content">
+                        <div class="experience-icon">
+                            <i class="fas fa-birthday-cake"></i>
+                        </div>
+                        <div class="experience-details">
+                            <h3>Bakery Assistant</h3>
+                            <p class="company">Part-Time</p>
+                            <ul>
+                                <li>Prepared dessert products and handled kitchen tasks</li>
+                                <li>Managed packing orders and ensured product presentation quality</li>
+                                <li>Assisted in coordinating deliveries and personally delivered orders to customers</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="experience-item">
+                    <div class="experience-year">2018 - 2023</div>
+                    <div class="experience-content">
+                        <div class="experience-icon">
+                            <i class="fas fa-tools"></i>
+                        </div>
+                        <div class="experience-details">
+                            <h3>Mobile Phone Repair Technician</h3>
+                            <p class="company">Freelance</p>
+                            <ul>
+                                <li>Repaired mobile phones by replacing parts such as screens and batteries</li>
+                                <li>Offered affordable and reliable services to customers</li>
+                                <li>Built technical troubleshooting and customer service skills</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="experience-item">
+                    <div class="experience-year">Dec 2019 - Feb 2020</div>
+                    <div class="experience-content">
+                        <div class="experience-icon">
+                            <i class="fas fa-industry"></i>
+                        </div>
+                        <div class="experience-details">
+                            <h3>Production Department Worker</h3>
+                            <p class="company">Part-Time</p>
+                            <ul>
+                                <li>Assisted in daily production process of health and wellness products</li>
+                                <li>Handled product packaging and labeling with attention to detail</li>
+                                <li>Ensured quality control and efficient operation standards</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Projects Section -->
     <section id="projects" class="section">
         <div class="container">
@@ -185,6 +338,205 @@
                         <div class="project-links">
                             <a href="#"><i class="fab fa-github"></i> GitHub</a>
                             <a href="#"><i class="fas fa-external-link-alt"></i> Demo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section id="certifications" class="section">
+        <div class="container">
+            <h2>Certifications & Training</h2>
+            <div class="certifications-grid">
+                <div class="cert-card featured">
+                    <div class="cert-icon">
+                        <i class="fab fa-android"></i>
+                    </div>
+                    <div class="cert-content">
+                        <h3>Android Certified Application Developer</h3>
+                        <p class="cert-issuer">Android ATC</p>
+                        <span class="cert-badge android">Mobile Development</span>
+                    </div>
+                </div>
+                <div class="cert-card featured">
+                    <div class="cert-icon">
+                        <i class="fas fa-shield-alt"></i>
+                    </div>
+                    <div class="cert-content">
+                        <h3>HCIA-Security V4.0</h3>
+                        <p class="cert-issuer">Huawei</p>
+                        <span class="cert-badge security">Cybersecurity</span>
+                    </div>
+                </div>
+                <div class="cert-card featured">
+                    <div class="cert-icon">
+                        <i class="fas fa-user-shield"></i>
+                    </div>
+                    <div class="cert-content">
+                        <h3>CompTIA Security+</h3>
+                        <p class="cert-issuer">CompTIA</p>
+                        <span class="cert-badge security">Security Certification</span>
+                    </div>
+                </div>
+                <div class="cert-card">
+                    <div class="cert-icon">
+                        <i class="fas fa-bug"></i>
+                    </div>
+                    <div class="cert-content">
+                        <h3>Ethical Hacking 101</h3>
+                        <p class="cert-issuer">OWASP & 0day</p>
+                        <span class="cert-badge hacking">Ethical Hacking</span>
+                    </div>
+                </div>
+                <div class="cert-card">
+                    <div class="cert-icon">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <div class="cert-content">
+                        <h3>Top Coders Malaysia 2024</h3>
+                        <p class="cert-issuer">DSA & MDEC</p>
+                        <span class="cert-badge coding">Programming</span>
+                    </div>
+                </div>
+                <div class="cert-card">
+                    <div class="cert-icon">
+                        <i class="fas fa-user-secret"></i>
+                    </div>
+                    <div class="cert-content">
+                        <h3>Social Engineering & Phishing in AI</h3>
+                        <p class="cert-issuer">OWASP & 0Day</p>
+                        <span class="cert-badge security">AI Security</span>
+                    </div>
+                </div>
+                <div class="cert-card">
+                    <div class="cert-icon">
+                        <i class="fas fa-usb"></i>
+                    </div>
+                    <div class="cert-content">
+                        <h3>Plug X Pwn: AI-Powered BadUSB</h3>
+                        <p class="cert-issuer">Asia Pacific University</p>
+                        <span class="cert-badge hardware">Hardware Security</span>
+                    </div>
+                </div>
+                <div class="cert-card">
+                    <div class="cert-icon">
+                        <i class="fas fa-search"></i>
+                    </div>
+                    <div class="cert-content">
+                        <h3>Hands on Penetration Testing Labs</h3>
+                        <p class="cert-issuer">HRD Corp</p>
+                        <span class="cert-badge pentesting">Penetration Testing</span>
+                    </div>
+                </div>
+                <div class="cert-card">
+                    <div class="cert-icon">
+                        <i class="fas fa-clinic-medical"></i>
+                    </div>
+                    <div class="cert-content">
+                        <h3>Cyber Clinic Intervention 2023</h3>
+                        <p class="cert-issuer">ZIKRONE IT HOLDINGS</p>
+                        <span class="cert-badge intervention">Cyber Intervention</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Competitions Section -->
+    <section id="competitions" class="section">
+        <div class="container">
+            <h2>Competitions & Achievements</h2>
+            <div class="competitions-container">
+                <div class="competition-category">
+                    <h3><i class="fas fa-flag"></i> Capture The Flag (CTF) Competitions</h3>
+                    <div class="competition-grid">
+                        <div class="competition-card ctf">
+                            <div class="competition-year">2025</div>
+                            <div class="competition-details">
+                                <h4>Badge to Breach: ICS Cyber Siege CTF Prelim</h4>
+                                <p class="organizer">NACSA</p>
+                                <span class="comp-badge ctf-badge">CTF</span>
+                            </div>
+                        </div>
+                        <div class="competition-card ctf">
+                            <div class="competition-year">2025</div>
+                            <div class="competition-details">
+                                <h4>NETSA Skill CTF Challenge</h4>
+                                <p class="organizer">UTeM</p>
+                                <span class="comp-badge ctf-badge">CTF</span>
+                            </div>
+                        </div>
+                        <div class="competition-card ctf">
+                            <div class="competition-year">2024</div>
+                            <div class="competition-details">
+                                <h4>AturKreatif CTF Competition</h4>
+                                <p class="organizer">USIM (2022, 2023, 2024)</p>
+                                <span class="comp-badge ctf-badge">CTF</span>
+                            </div>
+                        </div>
+                        <div class="competition-card ctf">
+                            <div class="competition-year">2024</div>
+                            <div class="competition-details">
+                                <h4>3108 CTF</h4>
+                                <p class="organizer">Bahtera Siber (2023, 2024)</p>
+                                <span class="comp-badge ctf-badge">CTF</span>
+                            </div>
+                        </div>
+                        <div class="competition-card ctf">
+                            <div class="competition-year">2023</div>
+                            <div class="competition-details">
+                                <h4>rAKSASA CTF</h4>
+                                <p class="organizer">rawSEC</p>
+                                <span class="comp-badge ctf-badge">CTF</span>
+                            </div>
+                        </div>
+                        <div class="competition-card ctf">
+                            <div class="competition-year">2023</div>
+                            <div class="competition-details">
+                                <h4>Wargames.MY CTF</h4>
+                                <p class="organizer">Wargames.MY</p>
+                                <span class="comp-badge ctf-badge">CTF</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="competition-category">
+                    <h3><i class="fas fa-trophy"></i> Other Competitions</h3>
+                    <div class="competition-grid">
+                        <div class="competition-card hackathon">
+                            <div class="competition-year">2025</div>
+                            <div class="competition-details">
+                                <h4>Alibaba Cloud Malaysia AI Hackathon</h4>
+                                <p class="organizer">Alibaba Cloud</p>
+                                <span class="comp-badge ai-badge">AI/ML</span>
+                            </div>
+                        </div>
+                        <div class="competition-card calligraphy">
+                            <div class="competition-year">2024</div>
+                            <div class="competition-details">
+                                <h4>INKFINITY: Arabic & Chinese Calligraphy</h4>
+                                <p class="organizer">UPSI (National Level)</p>
+                                <span class="comp-badge art-badge">Calligraphy</span>
+                            </div>
+                        </div>
+                        <div class="competition-card chess">
+                            <div class="competition-year">2023</div>
+                            <div class="competition-details">
+                                <h4>Chess Competition FST/FKAB</h4>
+                                <p class="organizer">USIM</p>
+                                <span class="comp-badge chess-badge">Chess</span>
+                            </div>
+                        </div>
+                        <div class="competition-card calligraphy">
+                            <div class="competition-year">2023</div>
+                            <div class="competition-details">
+                                <h4>Mahrajan X Mawahib Arabic Calligraphy</h4>
+                                <p class="organizer">USIM</p>
+                                <span class="comp-badge art-badge">Calligraphy</span>
+                            </div>
                         </div>
                     </div>
                 </div>
