--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hilmi Wali - Software Developer Portfolio</title>
+    <title>Hilmi Wali - Fresh Grad Software Developer Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <!-- Navigation -->
     <nav>
         <div class="container">
-            <div class="logo">Ahmad Hilmi</div>
+            <div class="logo">Hilmi Wali</div>
             <div class="nav-right">
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -36,16 +35,12 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Hi, I'm Ahmad Hilmi</h1>
-            <p>Computer Science Student | Full Stack Developer | Cybersecurity Enthusiast</p>
+            <h1>Hi, I'm Hilmi Wali</h1>
+            <p>Fresh Grad Software Developer | Cybersecurity Enthusiast</p>
             <div class="hero-buttons">
                 <a href="#contact" class="cta-button">Get In Touch</a>
-                <a href="#" class="resume-button" onclick="downloadResumeWithDebug(); return false;">
-                    <i class="fas fa-download"></i> Download Resume
-                </a>
             </div>
         </div>
     </section>
@@ -59,9 +54,9 @@
                     <i class="fas fa-user"></i>
                 </div>
                 <div class="about-text">
-                    <p>I'm a motivated final-year Computer Science student specializing in Information Security and Assurance with practical experience in website and mobile app development. Currently pursuing my Bachelor's degree at Universiti Sains Islam Malaysia with a CGPA of 3.67.</p>
+                    <p>A motivated final-year Computer Science student specializing in Information Security and Assurance with practical experience in website and mobile app development. Currently pursuing my Bachelor's degree at Universiti Sains Islam Malaysia with a CGPA of 3.67.</p>
                     <p>I am actively seeking a full-time role as a full stack, backend, or frontend developer upon completing my internship in August 2025. I enjoy working collaboratively in fast-paced environments, tackling technical challenges, and continuously expanding my skill set through emerging tools and frameworks.</p>
-                    <p>With a strong foundation in software engineering, cybersecurity knowledge, and a passion for building user-centric solutions, I aim to contribute meaningfully to innovative projects while advancing my growth in the tech industry.</p>
+                    <p>With a strong foundation in software engineering, a bit cybersecurity knowledge, and a passion for building user-centric solutions, I aim to contribute meaningfully to innovative projects while advancing my growth in the tech industry.</p>
                     <div class="resume-download-section">
                         <button class="resume-btn" onclick="downloadResumeWithDebug()">
                             <i class="fas fa-file-pdf"></i> Download My Resume
@@ -90,7 +85,7 @@
                 <div class="skill-card">
                     <i class="fas fa-mobile-alt"></i>
                     <h3>Mobile Development</h3>
-                    <p>Flutter, Dart, Java (Android Studio), Firebase</p>
+                    <p>Flutter, Dart, Java (Android Studio)</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-shield-alt"></i>
@@ -105,7 +100,7 @@
                 <div class="skill-card">
                     <i class="fas fa-database"></i>
                     <h3>Database & Cloud</h3>
-                    <p>MySQL, Firebase, phpMyAdmin, Cloud Firestore</p>
+                    <p>MySQL, Firebase, phpMyAdmin</p>
                 </div>
             </div>
         </div>
@@ -234,7 +229,6 @@
                             <ul>
                                 <li>Repaired mobile phones by replacing parts such as screens and batteries</li>
                                 <li>Offered affordable and reliable services to customers</li>
-                                <li>Built technical troubleshooting and customer service skills</li>
                             </ul>
                         </div>
                     </div>
@@ -279,8 +273,7 @@
                             <span class="tech-tag">Stripe</span>
                         </div>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> GitHub</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://github.com/hilmiwali/hikenity" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> Github</a>
                         </div>
                     </div>
                 </div>
@@ -298,8 +291,6 @@
                             <span class="tech-tag">Cloud Firestore</span>
                         </div>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> GitHub</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Demo</a>
                         </div>
                     </div>
                 </div>
@@ -317,8 +308,6 @@
                             <span class="tech-tag">WhoisXML</span>
                         </div>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> GitHub</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Demo</a>
                         </div>
                     </div>
                 </div>
@@ -336,8 +325,6 @@
                             <span class="tech-tag">MySQL</span>
                         </div>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> GitHub</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Demo</a>
                         </div>
                     </div>
                 </div>
@@ -556,10 +543,6 @@
                         <span>hilmiwali7702@gmail.com</span>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <span>+60-108167702</span>
-                    </div>
-                    <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <span>Bukit Jalil, Kuala Lumpur</span>
                     </div>
@@ -589,14 +572,12 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="social-links">
                 <a href="https://github.com/hilmiwali" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/hilmi-wali/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:hilmiwali7702@gmail.com"><i class="fas fa-envelope"></i></a>
-                <a href="tel:+60108167702"><i class="fas fa-phone"></i></a>
             </div>
             <p>&copy; 2025 Ahmad Hilmi. All rights reserved.</p>
         </div>
